--- a/config/database.yml
+++ b/config/database.yml
@@ -1,33 +1,28 @@
-# SQLite version 3.x
-#   gem install sqlite3
-#
-#   Ensure the SQLite 3 gem is defined in your Gemfile
-#   gem 'sqlite3'
-#
-default: &default
+--- 
+default: 
   adapter: postgresql
-  username:postgres
-  password:2211
-  pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
+  password: 2211
+  pool: "5"
   timeout: 5000
-
-development:
-  <<: *default
-  username:postgres
-  password:2211
-  database: staticpage_app_development
-
-# Warning: The database defined as "test" will be erased and
-# re-generated from your development database when you run "rake".
-# Do not set this db to the same as development or production.
-test:
-  <<: *default
-  username:postgres
-  password:2211
-  database: staticpage_app_test
-
-production:
-  <<: *default
-  username:postgres
-  password:2211
-  database: staticpage_app_production
+  username: postgres
+development: 
+  adapter: postgresql
+  #database: staticpage_app_development
+  password: 2211
+  pool: "5"
+  timeout: 5000
+  username: postgres
+production: 
+  adapter: postgresql
+  #database: staticpage_app_production
+  password: 2211
+  pool: "5"
+  timeout: 5000
+  username: postgres
+test: 
+  adapter: postgresql
+  #database: staticpage_app_test
+  password: 2211
+  pool: "5"
+  timeout: 5000
+  username: postgres
